# model_rocket_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.md.backup
Documentation/: PinAssignments.docx
modroc_controller/: CMakeLists.txt
modroc_controller/include/: accelerometer.h  altimeter.h  barometer.h  common.h  flight_monitor.h  hardware_platform.h  input_task.h  intertask_message.h  kinematics.h  message.h  output_task.h  thermometer.h
modroc_controller/sensors/include/: Device.h  DeviceIcm20948.h  HostSerif.h  Icm20948DataConverter.h  Icm20948Transport.h  bme280.h  icm20948.h
modroc_controller/sensors/src/: CMakeLists.txt  DeviceIcm20948.c  Icm20948Augmented.c  Icm20948AuxCompassAkm.c  Icm20948AuxTransport.c  Icm20948DataBaseControl.c  Icm20948DataBaseDriver.c  Icm20948DataConverter.c  Icm20948Dmp3Driver.c  Icm20948LoadFirmware.c  Icm20948MPUFifoControl.c  Icm20948SelfTest.c  Icm20948Setup.c  Icm20948Transport.c  accelerometer.c  barometer.c  bme280.c  icm20948.c  thermometer.c
modroc_controller/src/: CMakeLists.txt  altimeter.c  flight_monitor.c  hardware_platform.c  input_task.c  intertask_message.c  kinematics.c  message.c  modroc_controller.c  output_task.c
